--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Servidor de Servex",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
+    "start22": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan David Reina",
