--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "private": true,
   "description": "Servidor de Servex",
   "main": "server.js",
   "scripts": {
     "start": "node server/server.js",
-    "start22": "nodemon server/server.js",
+    "start2": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan David Reina",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.5",
-    "body-parser": "^1.18.3",
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.1.4",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.1",
-    "mongoose-unique-validator": "^2.0.2",
+    "mongoose": "^5.7.11",
+    "mongoose-unique-validator": "^2.0.3",
     "underscore": "^1.9.1"
   }
 }
