--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Servidor de Servex",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "start2": "nodemon server/server.js",
+    "start": "node server.js",
+    "start2": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan David Reina",
