finales de las imgs

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
-/uploads/
+!/uploads/.gitkeep
 !/uploads/clients/.gitkeep
 !/uploads/users/.gitkeep
 !/uploads/categories/.gitkeep
 !/uploads/subcategories/.gitkeep
 !/uploads/products/.gitkeep
-/files/
+!/files/.gitkeep
 !/files/products/.gitkeep
