--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
-!/uploads/.gitkeep
+/uploads/
 !/uploads/clients/.gitkeep
 !/uploads/users/.gitkeep
 !/uploads/categories/.gitkeep
 !/uploads/subcategories/.gitkeep
 !/uploads/products/.gitkeep
-!/files/.gitkeep
+/files/
 !/files/products/.gitkeep
